@startuml "Class Diagram"
class User {
}
class UserVoting {
}
class UserVotingOption {
}
class Voting {
  datetime_start : Datetime
  datetime_end : Datetime
}
class Question {
  name : String
  description : Text
}
class QuestionOption {
  name : String
}

Voting "1" *-- "N" Question
Question "1" *-- "N" QuestionOption
User - UserVoting
UserVoting - Voting
UserVoting - UserVotingOption
UserVotingOption - Question
UserVotingOption - QuestionOption
@enduml
